Fix vertical alignment.

--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -486,7 +486,11 @@ span.block {
     margin-bottom: 10px;
   }
   .panel-body .col-xs-2 h4.invoiced {
-    margin: 0 0 0 25px;
+    margin: 2px 0 0 25px;
+  }
+  .progress.progress-small {
+    margin-top: 7px;
+    margin-bottom: 0;
   }
 }
 
